2013-11-05  H.J. Lu  <hongjiu.lu@intel.com>

	PR sanitizer/59018
	* sanitizer_common/sanitizer_linux.cc (internal_mmap,
	internal_munmap, internal_open, internal_read, internal_write,
	internal_stat, internal_lstat, internal_fstat, internal_readlink,
	internal_unlink, internal_execve, NanoTime, BlockingMutex::Lock,
	BlockingMutex::Unlock, internal_ptrace, internal_getdents,
	internal_sigaltstack): Cast pointers to uptr for 64-bit syscalls.

2013-11-04  Kostya Serebryany  <kcc@google.com>

	* All source files: Merge from upstream r191666.
	* merge.sh: Added lsan.
	* configure.ac (AC_CONFIG_FILES): Added lsan.
	* Makefile.am (SUBDIRS): Added lsan.
	* sanitizer_common/Makefile.am (sanitizer_common_files): Added new fles.
	* asan/Makefile.am (asan_files): Added new files.
	(libasan_la_LIBADD): Added a dependency on lsan.
	* lsan/Makefile.am: New file.
	* asan/Makefile.in: Regenerate.
	* lsan/Makefile.in: Regenerate.
	* Makefile.in: Regenerate.
	* configure: Regenerate.
	* sanitizer_common/Makefile.in: Regenerate.

2013-09-20  Alan Modra  <amodra@gmail.com>

	* configure: Regenerate.

2013-09-01  Iain Sandoe  <iain@codesourcery.com>

	* ubsan/Makefile.am (libubsan_la_LIBADD): Revise to omit
	libinterception.la for Darwin.
	* ubsan/Makefile.in: Regenerate.

2013-08-30  Jakub Jelinek  <jakub@redhat.com>

	* Makefile.am (SUBDIRS): Add ubsan.
	* configure.ac (AC_CONFIG_FILES): Add ubsan/Makefile.
	* merge.sh: Merge ubsan.
	* sanitizer_common/sanitizer_report_decorator.h: Partial merge from trunk.
	* sanitizer_common/sanitizer_printf.cc: Likewise.
	* sanitizer_common/sanitizer_common.h: Likewise.
	* ubsan: New directory. Import ubsan runtime from llvm.

2013-06-03  Christophe Lyon  <christophe.lyon@linaro.org>

	* sanitizer_common/sanitizer_linux.cc (MemoryMappingLayout::Next):
	Cherry pick upstream r182922.

2013-05-07  Christophe Lyon  <christophe.lyon@linaro.org>

	* configure.tgt: Add ARM pattern.

2013-03-22  Jakub Jelinek  <jakub@redhat.com>

	PR other/43620